--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Ashray Gupta</h1>
+        <h1 class="heading">Ashish Vats</h1>
         <h2 class="subheading">MERN Task HTML</h2>
+	<h3 class ="sub- subheading">Click the given below links of tasks</h3>
         <ul class="list">
             <li class="list-item"><a href="task1.html">Task 1 </a></li>
             <li class="list-item"><a href="task2.html">Task 2 </a></li>
